styles: prevent aligning always vertically

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,5 @@
 .pageContent {
   display: flex;
   justify-content: center; 
-  align-items: center; 
   height: calc(100vh - var(--navbar-height));
 }
